| Bug #19543 | Out REDO log on subscription creation during startup, missing error message | ||
|---|---|---|---|
| Submitted: | 4 May 2006 21:21 | Modified: | 21 Jun 2006 10:47 |
| Reporter: | Serge Kozlov | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S2 (Serious) |
| Version: | 5.1 | OS: | Linux (Linux FC4) |
| Assigned to: | Tomas Ulin | Target Version: | |
[4 May 2006 21:21]
Serge Kozlov
[17 May 2006 12:51]
Tomas Ulin
pleace attach trace files
[18 May 2006 16:14]
Serge Kozlov
trace, log files and config.ini
Attachment: bug19543.tar.gz (application/gzip, text), 71.28 KiB.
[18 May 2006 17:50]
Tomas Ulin
test for setting prio order
[18 May 2006 17:56]
Jonas Oreland
testing me too
[20 Jun 2006 13:54]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/7917
[21 Jun 2006 10:47]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
See remarks I made under Bug#17297.
