Bug #19543 Out REDO log on subscription creation during startup, missing error message - add error message